# MidasClient

./: .gitattributes  CMakeCPackOptions.cmake.in  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake.in  ChangeLog.txt  Copyright.txt  MIDAS.cmake  MIDASCPack.cmake  SuperBuild.cmake  licenseheader.txt
Application/: CMakeLists.txt
Application/CMakeScript/: CMakeLists.txt  MIDAS.cmake
Application/CMakeScript/TestKeys/: add2.png.md5
Application/Dionysus/utils/: kwCrypt.cxx  kwCrypt.h  mcLicenseTest.cxx
Application/MIDASDesktop/: CMakeLists.txt  MIDASDesktopIcons.qrc  main.cxx
Application/MIDASDesktop/GUI/: AboutUI.cxx  AddAuthorUI.cxx  AddAuthorUI.h  AddBitstreamsThread.cxx  AddBitstreamsThread.h  AddKeywordUI.cxx  AddKeywordUI.h  AddKeywordUI.ui  AgreementUI.cxx  AgreementUI.h  AgreementUI.ui  ButtonDelegate.cxx  ButtonDelegate.h  ButtonEditUI.h  ButtonLineEdit.cxx  ButtonLineEdit.h  CreateMidasCollectionUI.cxx  CreateMidasCommunityUI.cxx  CreateMidasItemUI.cxx  CreateMidasResourceUI.cxx  CreateMidasResourceUI.h  CreateProfileUI.cxx  CreateProfileUI.h  CreateProfileUI.ui  DeleteResourceUI.cxx  DeleteResourceUI.h  DeleteResourceUI.ui  DeleteThread.cxx  DeleteThread.h  ExpandTreeThread.cxx  ExpandTreeThread.h  FileOverwriteUI.cxx  FileOverwriteUI.h  FileOverwriteUI.ui  GUIAgreement.cxx  GUIAgreement.h  GUIFileOverwriteHandler.cxx  GUIFileOverwriteHandler.h  GUILogger.cxx  GUILogger.h  (+68 more)
Application/MIDASDesktop/icons/: MIDAS_Desktop_LargeIcon.icns
Application/MIDASDesktop/utils/: CMakeLists.txt  DCmain.cxx  Logger.h  Printable.h  metaOutput.cxx  metaOutput.h
Application/MIDAScli/: CMakeLists.txt  midasCLI.cxx  midasCLI.h  midasCLIApplication.cxx  midasCLIApplication.h
Application/MidasDesktop/utils/: MidasClientLicense.cxx
Application/Slicer/FetchMIDAS/: vtkFetchMIDASDescribeDataWidget.cxx  vtkFetchMIDASFlatResourceWidget.cxx  vtkFetchMIDASHandler.cxx  vtkFetchMIDASIcons.cxx  vtkFetchMIDASMulticolumnWidget.cxx  vtkFetchMIDASParser.cxx  vtkFetchMIDASParserHID.cxx  vtkFetchMIDASParserXND.cxx  vtkFetchMIDASQueryTermWidget.cxx  vtkFetchMIDASResourceUploadWidget.cxx  vtkFetchMIDASServer.cxx  vtkFetchMIDASWriter.cxx  (+6 more)
Applications/: CMakeLists.txt
Applications/MIDASDesktop/: CMakeLists.txt  MIDASDesktop.rc  MidasClientGlobal.h  main.cxx
Applications/MIDASDesktop/GUI/: GUILogger.cxx  GUILogger.h  MIDASDesktopUI.cxx  MIDASDesktopUI.h  MIDASDesktopUI.ui  MidasApplication.cxx  MidasApplication.h
Applications/MIDAScli/: CMakeLists.txt  main.cxx  midasCLI.cxx  midasCLI.h  midasCLIApplication.cxx  midasCLIApplication.h
Code/: CMakeLists.txt  MIDASConfig.h.in  mdoAssetstore.h  mdoBitstream.cxx  mdoBitstream.h  mdoCollection.cxx  mdoCollection.h  mdoCommunity.cxx  mdoCommunity.h  mdoItem.cxx  mdoItem.h  mdoObject.h  mdoProxy.cxx  mdoProxy.h  mdoProxyInterface.cxx  mdoProxyInterface.h  mdoVersion.cxx  mdoVersion.h  mdsBitstream.cxx  mdsBitstream.h  mdsCollection.cxx  mdsCollection.h  mdsCommunity.cxx  mdsCommunity.h  mdsDatabaseAPI.cxx  mdsDatabaseAPI.h  mdsDatabaseInfo.cxx  mdsItem.cxx  mdsItem.h  mdsObject.h  mdsSQLiteDatabase.cxx  mdsSQLiteDatabase.h  mdsUpgrade.cxx  mdsUpgrade.h  mdsUpgradeHandler.h  mdsVersion.cxx  mdsVersion.h  metaCommand.cxx  metaCommand.h  midasAgreementHandler.h  (+42 more)
Code/sql/: MIDAS_SQLite.sql
Libs/: CMakeLists.txt
Libs/Core/: CMakeLists.txt  CTKDataManagementMIDASClientCoreConfig.cmake.in  CTestConfig.cmake  CTestCustom.cmake.in  ChangeLog.txt  Copyright.txt  GenerateConfig.cmake  MIDASClientCoreConfig.cmake.in  UseCTKDataManagementMIDASClientCore.cmake.in  UseMIDASClientCore.cmake.in  target_libraries.cmake
Libs/Core/CMake/: MIDAS3ClientDatabaseConfigure.cmake.in  MIDASClientDatabaseConfigure.cmake.in
Libs/Core/Code/: MIDASConfig.h.in  m3doBitstream.cxx  m3doBitstream.h  m3doCommunity.cxx  m3doCommunity.h  m3doFolder.cxx  m3doFolder.h  m3doItem.cxx  m3doItem.h  m3dsBitstream.cxx  m3dsBitstream.h  m3dsFolder.cxx  m3dsFolder.h  m3dsItem.cxx  m3dsItem.h  m3wsBitstream.cxx  m3wsBitstream.h  m3wsFolder.cxx  m3wsFolder.h  m3wsItem.cxx  m3wsItem.h  mdoAssetstore.cxx  mdoAssetstore.h  mdoBitstream.cxx  mdoBitstream.h  mdoCollection.cxx  mdoCollection.h  mdoCommunity.cxx  mdoCommunity.h  mdoItem.cxx  mdoItem.h  mdoObject.cxx  mdoObject.h  mdoProxy.cxx  mdoProxy.h  mdoProxyInterface.cxx  mdoProxyInterface.h  mdoVersion.cxx  mdoVersion.h  mdsBitstream.cxx  (+69 more)
Libs/Core/Code/sql/: MIDAS3_SQLite.sql  MIDAS_SQLite.sql
Libs/Core/Testing/: CMakeLists.txt
Libs/Widgets/: CMakeLists.txt  CTKDataManagementMIDASClientWidgetsConfig.cmake.in  GenerateConfig.cmake  MIDASClientWidgetsConfig.cmake.in  UseCTKDataManagementMIDASClientWidgets.cmake.in  UseMIDASClientWidgets.cmake.in  target_libraries.cmake
Libs/Widgets/GUI/: AboutUI.cxx  AboutUI.h  AddAuthorUI.cxx  AddAuthorUI.h  AddAuthorUI.ui  AddBitstreamsThread.cxx  AddBitstreamsThread.h  AddKeywordUI.cxx  AddKeywordUI.h  AgreementUI.cxx  AgreementUI.h  ButtonDelegate.cxx  ButtonDelegate.h  ButtonEditUI.h  ButtonLineEdit.cxx  ButtonLineEdit.h  CreateMidasResourceUI.cxx  CreateMidasResourceUI.h  CreateMidasResourceUI.ui  CreateProfileUI.cxx  CreateProfileUI.h  CreateProfileUI.ui  DeleteResourceUI.cxx  DeleteResourceUI.h  DeleteThread.cxx  DeleteThread.h  ExpandTreeThread.cxx  ExpandTreeThread.h  FileOverwriteUI.cxx  FileOverwriteUI.h  GUIAgreement.cxx  GUIAgreement.h  GUIFileOverwriteHandler.cxx  GUIFileOverwriteHandler.h  GUIMirrorHandler.cxx  GUIMirrorHandler.h  GUIProgress.cxx  GUIProgress.h  GUIUpgradeHandler.cxx  GUIUpgradeHandler.h  (+83 more)
Testing/: CMakeLists.txt
Utilities/: CMakeLists.txt
Utilities/cmcurl/: amigaos.c  amigaos.h  arpa_telnet.h  base64.c  base64.h  connect.c  connect.h  content_encoding.c  content_encoding.h  cookie.c  cookie.h  curl_memory.h  curlx.h  dict.c  dict.h  easy.c  easyif.h  escape.c  escape.h  file.c  file.h  formdata.c  formdata.h  ftp.c  ftp.h  getenv.c  getinfo.c  getinfo.h  gtls.c  gtls.h  hash.c  hash.h  hostares.c  hostasyn.c  hostip.c  hostip.h  hostip4.c  hostip6.c  hostsyn.c  hostthre.c  (+80 more)
Utilities/kwsys/: CMakeLists.txt  SystemTools.cxx
Utilities/sqlite/: sqlite3.c
(+26 files in other folders)
